crates/figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_mixed_missing_arguments.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: missing required argument
   ╭─[ <suggestion>:1:19 ]
   │
 1 │ deploy production --region <region>
   │                   ────────┬────────  
   │                           ╰────────── Deployment region (required)
───╯
